--- a/css.css
+++ b/css.css
@@ -53,6 +53,11 @@ body{
     justify-content: center;
     align-items: center;
 }
+img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
 
 #texto{
  font-size: 18px;
